traccar.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: traccar
  name: traccar
spec:
  replicas: 1
  selector:
    matchLabels:
      run: traccar
  template:
    metadata:
      labels:
        run: traccar
    spec:
      containers:
      - image: traccar/traccar:ubuntu
        name: traccar
        resources: {}
        ports:
        - containerPort: 8082
          name: traccar-web-svc
        volumeMounts:
        - name: traccar-xml
          mountPath: /opt/traccar/conf      
      volumes:
      - name: traccar-xml
        configMap:
          name: traccar
      nodeSelector:
        kubernetes.io/arch: arm
