traccar_client_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: traccar
  name: traccar-client
spec:
  type: LoadBalancer
  ports:
    - port: 5055
      protocol: TCP
      name: client
  selector:
    run: traccar
