traccar_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: traccar
  name: traccar
spec:
  type: NodePort
  ports:
  - name: traccar
    protocol: TCP
    port: 8082
    targetPort: traccar-web-svc
  selector:
    run: traccar
