traccar_ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: traccar
spec:
  rules:
  - host: traccar.pik8s.home
    http:
      paths:
      - backend:
          serviceName: traccar
          servicePort: 8082
